--- a/public/hack_the_password/styles/site.css
+++ b/public/hack_the_password/styles/site.css
@@ -15,7 +15,7 @@ body {
 
 .passwordStrengthBarWrapper {
     width: 248px;
-    height: 18px;
+    /* height: 18px; */
     border: 2px solid #666;
     margin-bottom: .5em;
 }
