fix action for login form

--- a/templates/temple-signin-local.html
+++ b/templates/temple-signin-local.html
@@ -27,7 +27,7 @@
         <div class="content row no-gutter">
           <div id="login-container" class="col-xs-6 col-xs-offset-3 col-center">        
             <div class="row">
-              <form action="{{ link }}" method="post">
+              <form action="/update" method="post">
                 <div class="form-group">
                   <img id="tu-logo" class="img-responsive" src="/temple_files/templelogo.png" alt="Temple University">
 		</div>
